[package]
name = "ip_proxy_pool"
version = "0.1.3"
edition = "2021"
description = "A simple Rust IP proxy pool library"
license = "MIT OR Apache-2.0"
authors = ["Your Name <you@example.com>"]

[dependencies]
warp = "0.3" # HTTP 服务框架
url = "2.5.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = [
    "json",
    "rustls-tls",
    "blocking",
    "cookies",
] }
# gzip 解压
flate2 = "1.0"
tokio = { version = "1", features = ["full"] }
